--- a/config/database.yml
+++ b/config/database.yml
@@ -6,6 +6,9 @@
 development:
   adapter: sqlite3
   database: db/development.sqlite3
+  host: localhost
+  username: annehomann
+  password:
   pool: 5
   timeout: 5000
 
