--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -8,6 +8,8 @@
 #  notes      :text
 #  created_at :datetime
 #  updated_at :datetime
+#  user_id    :integer
+#  source     :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
