--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -6,10 +6,11 @@
 #  title      :string(255)
 #  brief      :text
 #  deadline   :date
-#  client     :string(255)
 #  sidenotes  :text
+#  client     :string(255)
 #  created_at :datetime
 #  updated_at :datetime
+#  user_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
