--- a/config/database.yml
+++ b/config/database.yml
@@ -14,3 +14,11 @@ production:
   database: kollate_development
   pool: 5
   password:
+
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: kollate_development
+  pool: 5
+  password:
